fix scrollbars showing unnecessarily on popup

--- a/styles.css
+++ b/styles.css
@@ -3163,7 +3163,7 @@ html.light #popup::before {
     flex-direction: column;
     gap: 8px;
     
-    overflow: scroll;
+    overflow-y: auto;
     max-height: 70vh;
 }
 
